Feat: atualiza testes para suportar paginação nas respostas de configurações e usuários